# scrimmage_ros

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  setup.py
cfg/: scrimmage_ros.cfg  uuv_ex1.cfg
cmake/Modules/: setenv.in
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
include/scrimmage_ros/: dynamic_param_client.h  entity.h  nodelet.h  scrimmage_autonomy.h  scrimmage_ros.h
launch/: auction.launch  entity.launch  entity_nav_2d.launch  move_base.launch  multiple-robots.launch  nodelet.launch  robot.launch  scrimmage.launch  user-control.launch
maps/: simple-maze-1.xml  simple-maze-1.yaml
missions/: ros-ex1.xml  user-control-jsbsim.xml  user-control-unicycle.xml
missions/example_template/: entity.template.xml  mission.template.xml  mission.yaml
msg/: Contact.msg  ContactArray.msg  ID.msg  RosBidAuction.msg  RosStartAuction.msg
rviz/: entity1.rviz  entity2.rviz  robot1.rviz  robot2.rviz
scripts/: edit-config.sh  scrimmage_ros.py
src/: auctioneer.cpp  dynamic_param_client.cpp  entity.cpp  nodelet.cpp  scrimmage_autonomy.cpp  scrimmage_ros.cpp
src/scrimmage_ros/: EntityLaunch.py  MultiProcessLogger.py  SimFilesGenerator.py  __init__.py  utils.py
src/scrimmage_ros/templates/: sim.template.launch
src/scrimmage_ros/test/: test_MultiProcessLogger.py  test_entity_launch.py  test_ros_find_path.py  test_sim_file_generation.py  test_sim_roslaunch.py
src/scrimmage_ros/test/templates/: entity.template.xml  entity_types_map.yaml  map_server.launch  mission.template.xml  nav_2d_mission.yaml  nav_2d_processes.yaml
srv/: ScrimmageNodeAdvertise.srv
test/: dyn_param.launch  test_auction.cpp  test_auction.launch  test_auction2.launch  test_dyn_param.cpp  test_dyn_param.launch  test_dyn_param2.launch  test_entity.launch  test_two_subscribers.launch
urdf/: robot.urdf
